# CodeGenesisAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: qodana_code_quality.yml
config/: qodana.yaml  sourcery.yaml
src/: main.py  project_creator.py
