[tool.poetry]
name = "codegenesisai"
version = "0.1.0"
description = ""
authors = ["zolcsika71 <bushdoctor2008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
spacy = "^3.7.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
